# Truth_Table_parser

./: .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_ui.py  node.h  parcer.cpp  parser.h  test_parser  test_parser.cpp  tokenizer  tokenizer.cpp  tokenizer.h  truthtable  truthtable.cpp  truthtable.h
